<resources>
    <string name="app_name">Movies</string>
    <string name="error_message">There was a problem retrieving your movies.\nWould you like to retry?</string>
    <string name="retry_label">Retry</string>
    <string name="title_activity_info">Info</string>
    <string name="sort_title">Sort:</string>
    <string name="rating_format">%.1f/10</string>
    <string-array name="sort_array">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Favorites</item>
    </string-array>
    <string name="title_activity_about">About</string>

    <string name="version">Version: %s</string>
    <string name="about_license_label">This Application was developed by Theodore Doll licensed under the apache 2.0 license.</string>
    <string name="license_button_label">License</string>
    <string name="credits_label">Credits:</string>
    
    <string name="okhttp_title">OkHttp</string>
    <string name="okhttp_dev">Square, Inc.</string>
    <string name="okhttp_desc">An HTTP &amp; SPDY client for Android and Java applications.</string>
    <string name="okhttp_link">https://github.com/square/okhttp</string>
    <string name="picasso_title">Picasso</string>
    <string name="picasso_dev">Square, Inc.</string>
    <string name="picasso_desc">A powerful image downloading and caching library for Android.</string>
    <string name="picasso_link">https://github.com/square/picasso</string>
    <string name="gson_title">google-gson</string>
    <string name="gson_dev">Google Inc.</string>
    <string name="gson_desc">Gson is a Java library that can be used to convert Java Objects into their JSON representation. It can also be used to convert a JSON string to an equivalent Java object. Gson can work with arbitrary Java objects including pre-existing objects that you do not have source-code of.</string>
    <string name="gson_link">https://github.com/google/gson</string>

    <string name="add_favorite">Add favorite</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="empty_favorites">To add movies to you favorites select a movies from popular or top rated and click the add to favorites button</string>
    <string name="trailer_label">Trailers:</string>
    <string name="review_label">Reviews:</string>

</resources>
