<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.teddoll.movies.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/TextAppearance.Dark.XLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/version"
            style="@style/TextAppearance.Dark.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_db_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_license_label" />

        <Button
            android:id="@+id/button_license"
            style="@style/TextAppearance.Light.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/license_button_label"/>

        <TextView
            style="@style/TextAppearance.Dark.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/credits_label" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_dark" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_okhttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/okhttp_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/primary_dark" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/okhttp_dev" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/okhttp_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_picasso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/picasso_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/primary_dark" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/picasso_dev" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/picasso_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/about_gson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gson_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/primary_dark" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gson_dev" />

                <TextView
                    style="@style/TextAppearance.Dark.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gson_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>