<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.Dark.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message" />

        <Button
            android:id="@+id/button_retry"
            style="@style/RaisedButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/retry_label" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_faves"
        style="@style/TextAppearance.Dark.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/empty_favorites"
        android:visibility="gone"/>

</RelativeLayout>